fix gallery link alignment

--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -8,5 +8,12 @@ h1 {
 }
 
 .gallery img {
-  padding: 20px;
+  padding: 0.5rem;
+  margin: 1rem;
+}
+
+.gallery .gallery-list-item{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
